# mesh-saliency

./: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Edge.cpp  Edge.h  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  Types.h  Vertex.cpp  Vertex.h  main.cpp
